feat(menu): add unicorn menu

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -215,5 +215,7 @@
   "Info": "Info",
   "Didn't find your token？or you can try": "Didn't find your token？or you can try",
   "submit": "submit",
-  "it to us.": "it to us."
+  "it to us.": "it to us.",
+  "Unicorn Contest": "Unicorn Wettbewerb",
+  "Event": "Ereignis"
 }
