--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -220,5 +220,7 @@
   "Info": "Info",
   "Didn't find your token？or you can try": "Didn't find your token？or you can try",
   "submit": "submit",
-  "it to us.": "it to us."
+  "it to us.": "it to us.",
+  "Unicorn Contest": "Unicorn Contest",
+  "Event": "Event"
 }
