--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -222,5 +222,7 @@
   "Info": "信息",
   "Didn't find your token？or you can try": "找不到你想要的令牌, 也许您可以尝试把它",
   "submit": "提交",
-  "it to us.": "给我们。"
+  "it to us.": "给我们。",
+  "Unicorn Contest": "独角兽",
+  "Event": "活动"
 }
