--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -217,5 +217,7 @@
   "Got a problem?": "遇到了問題?",
   "About technical issues": "關於技術問題",
   "About business issues": "關於商務問題",
-  "Info": "信息"
+  "Info": "信息",
+  "Unicorn Contest": "独角兽",
+  "Event": ""
 }
