--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -107,5 +107,7 @@
   "Info": "Info",
   "Didn't find your token？or you can try": "Didn't find your token？or you can try",
   "submit": "submit",
-  "it to us.": "it to us."
+  "it to us.": "it to us.",
+  "Unicorn Contest": "Concurso Unicornio",
+  "Event": "Evento"
 }
