fix(text): update text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -209,7 +209,7 @@
   "Discover Launched": "Discover Launched",
   "DELAY": "Delay",
   "Dao Desc": "GoDao let every member of the KCS community can participate in KCC decision-making",
-  "GoDao Launched": "GoDao Launched",
+  "GoDao Launched": "GoDAO Launched",
   "Safe.kcc.io Launched": "Safe.kcc.io Launched",
   "Gnosis Safe Multisig": "Gnosis Safe Multisig",
   "Protect asset security": "Protect asset security",
