fix(text): update text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -208,8 +208,8 @@
   "Discover Desc": "All projects building on KCC",
   "Discover Launched": "Discover Launched",
   "DELAY": "Delay",
-  "Dao Desc": "GoDao let every member of the KCS community can participate in KCC decision-making",
-  "GoDao Launched": "GoDAO Launched",
+  "Dao Desc": "GoDAO let every member of the KCS community can participate in KCC decision-making",
+  "GoDAO Launched": "GoDAO Launched",
   "Safe.kcc.io Launched": "Safe.kcc.io Launched",
   "Gnosis Safe Multisig": "Gnosis Safe Multisig",
   "Protect asset security": "Protect asset security",
