--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -210,8 +210,8 @@
   "Discover Desc": "所有基于KCC链上的项目",
   "Discover Launched": "Discover上线",
   "DELAY": "异常",
-  "Dao Desc": "GoDao让KCS社区的每个成员都能参与KCC决策",
-  "GoDao Launched": "GoDAO 上线",
+  "Dao Desc": "GoDAO让KCS社区的每个成员都能参与KCC决策",
+  "GoDAO Launched": "GoDAO 上线",
   "Safe.kcc.io Launched": "多签钱包上线",
   "Gnosis Safe Multisig": "Gnosis Safe Multisig",
   "Protect asset security": "保护KCC链上资产安全",
