--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -207,7 +207,7 @@
   "Check the guide": "die Anleitung anschauen",
   "Search": "Suche",
   "Discover Desc": "All projects building on KCC",
-  "Dao Desc": "GoDao let every member of the KCS community can participate in KCC decision-making",
+  "Dao Desc": "GoDAO let every member of the KCS community can participate in KCC decision-making",
   "View more wallet in Discover": "View more wallet in Discover",
   "Got a problem?": "Got a problem?",
   "About technical issues": "About technical issues",
