--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -99,7 +99,7 @@
   "KCC Ambassador Program": "Programa de embajadores de KCC",
   "Risk Statement": "Declaración de riesgo",
   "Discover Desc": "All projects building on KCC",
-  "Dao Desc": "GoDao let every member of the KCS community can participate in KCC decision-making",
+  "Dao Desc": "GoDAO let every member of the KCS community can participate in KCC decision-making",
   "View more wallet in Discover": "View more wallet in Discover",
   "Got a problem?": "Got a problem?",
   "About technical issues": "About technical issues",
