--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -210,8 +210,8 @@
   "Discover Desc": "所有基於KCC鏈上的項目",
   "Discover Launched": "Discover上線",
   "DELAY": "異常",
-  "Dao Desc": "GoDao讓KCS社區的每個成員都能參與KCC決策",
-  "GoDao Launched": "GoDAO 上线",
+  "Dao Desc": "GoDAO讓KCS社區的每個成員都能參與KCC決策",
+  "GoDAO Launched": "GoDAO 上线",
   "View more wallet in Discover": "在Discover中查看更多",
   "Protect asset security": "保护KCC链上资产安全",
   "Got a problem?": "遇到了問題?",
