--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -222,5 +222,6 @@
   "submit": "submit",
   "it to us.": "it to us.",
   "Unicorn Contest": "Unicorn Contest",
-  "Event": "Event"
+  "Event": "Event",
+  "KCC Community": "KCC Community"
 }
