--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -109,5 +109,6 @@
   "submit": "submit",
   "it to us.": "it to us.",
   "Unicorn Contest": "Concurso Unicornio",
-  "Event": "Evento"
+  "Event": "Evento",
+  "KCC Community": "Comunidad KCC"
 }
