--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -224,5 +224,6 @@
   "submit": "提交",
   "it to us.": "给我们。",
   "Unicorn Contest": "独角兽",
-  "Event": "活动"
+  "Event": "活动",
+  "KCC Community": "KCC社区"
 }
