--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -219,5 +219,6 @@
   "About business issues": "關於商務問題",
   "Info": "信息",
   "Unicorn Contest": "独角兽",
-  "Event": "独角兽"
+  "Event": "独角兽",
+  "KCC Community": "KCC社區"
 }
