--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -217,5 +217,6 @@
   "submit": "submit",
   "it to us.": "it to us.",
   "Unicorn Contest": "Unicorn Wettbewerb",
-  "Event": "Ereignis"
+  "Event": "Ereignis",
+  "KCC Community": "KCC Gemeinschaft"
 }
