feat(milestone): update milestone

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,5 +223,9 @@
   "it to us.": "it to us.",
   "Unicorn Contest": "Unicorn Contest",
   "Event": "Event",
-  "KCC Community": "KCC Community"
+  "KCC Community": "KCC Community",
+  "KCC GODAO Foundation registered": "KCC GODAO Foundation registered",
+  "Ecosystem Incentive Funds announced": "Ecosystem Incentive Funds announced",
+  "First Hackathon kicked off": "First Hackathon kicked off",
+  "Incubating most valued projects in Unicorn": "Incubating most valued projects in Unicorn"
 }
