--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -225,5 +225,9 @@
   "it to us.": "给我们。",
   "Unicorn Contest": "独角兽",
   "Event": "活动",
-  "KCC Community": "KCC社区"
+  "KCC Community": "KCC社区",
+  "KCC GODAO Foundation registered":"KCC GODAO 注册",
+  "Ecosystem Incentive Funds announced":"KCC链上生态激励计划发布",
+  "First Hackathon kicked off":"首届黑客松（KCC Unicorn Contest）开幕",
+  "Incubating most valued projects in Unicorn":"孵化KCC Unicorn Contest中最具增值价值的项目"
 }
