--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -220,5 +220,9 @@
   "Info": "信息",
   "Unicorn Contest": "独角兽",
   "Event": "独角兽",
-  "KCC Community": "KCC社區"
+  "KCC Community": "KCC社區",
+  "KCC GODAO Foundation registered": "KCC GODAO 註冊",
+  "Ecosystem Incentive Funds announced": "KCC鏈上生態激勵計劃發布",
+  "First Hackathon kicked off": "首屆黑客松（KCC Unicorn Contest）開幕",
+  "Incubating most valued projects in Unicorn": "孵化KCC  Unicorn Contest中最具增值價值的項目"
 }
