feat(milestone): update

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,8 +224,8 @@
   "Unicorn Contest": "Unicorn Contest",
   "Event": "Event",
   "KCC Community": "KCC Community",
-  "KCC GoDAO Foundation registered": "KCC GoDAO Foundation registered",
-  "Ecosystem Incentive Funds announced": "Ecosystem Incentive Funds announced",
-  "First Hackathon kicked off": "First Hackathon kicked off",
-  "Incubating most valued projects in Unicorn": "Incubating most valued projects in Unicorn"
+  "KCC GoDAO Foundation Registered": "KCC GoDAO Foundation Registered",
+  "Ecosystem Incentive Funds Announced": "Ecosystem Incentive Funds Announced",
+  "First Hackathon Kicked Off": "First Hackathon Kicked Off",
+  "Incubating Most Valued Projects in Unicorn": "Incubating Most Valued Projects in Unicorn"
 }
