--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -226,8 +226,8 @@
   "Unicorn Contest": "独角兽",
   "Event": "活动",
   "KCC Community": "KCC社区",
-  "KCC GoDAO Foundation registered":"KCC GoDAO 注册",
-  "Ecosystem Incentive Funds announced":"链上生态激励计划发布",
-  "First Hackathon kicked off":"首届黑客松（KCC Unicorn Contest）开幕",
-  "Incubating most valued projects in Unicorn":"孵化KCC Unicorn Contest中最具增值价值的项目"
+  "KCC GoDAO Foundation Registered":"KCC GoDAO 注册",
+  "Ecosystem Incentive Funds Announced":"链上生态激励计划发布",
+  "First Hackathon Kicked Off":"首届黑客松（KCC Unicorn Contest）开幕",
+  "Incubating Most Valued Projects in Unicorn":"孵化KCC Unicorn Contest中最具价值的项目"
 }
