--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -221,8 +221,8 @@
   "Unicorn Contest": "独角兽",
   "Event": "独角兽",
   "KCC Community": "KCC社區",
-  "KCC GoDAO Foundation registered": "KCC GoDAO 註冊",
-  "Ecosystem Incentive Funds announced": "鏈上生態激勵計劃發布",
-  "First Hackathon kicked off": "首屆黑客松（KCC Unicorn Contest）開幕",
-  "Incubating most valued projects in Unicorn": "孵化KCC  Unicorn Contest中最具增值價值的項目"
+  "KCC GoDAO Foundation Registered": "KCC GoDAO 註冊",
+  "Ecosystem Incentive Funds Announced": "鏈上生態激勵計劃發布",
+  "First Hackathon Kicked Off": "首屆黑客松（KCC Unicorn Contest）開幕",
+  "Incubating Most Valued Projects in Unicorn": "孵化KCC  Unicorn Contest中最具價值的項目"
 }
