feat(activity): add new activity

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -227,5 +227,6 @@
   "KCC GoDAO Foundation Registered": "KCC GoDAO Foundation Registered",
   "Ecosystem Incentive Funds Announced": "Ecosystem Incentive Funds Announced",
   "First Hackathon Kicked Off": "First Hackathon Kicked Off",
-  "Incubating Most Valued Projects in Unicorn": "Incubating Most Valued Projects in Unicorn"
+  "Incubating Most Valued Projects in Unicorn": "Incubating Most Valued Projects in Unicorn",
+  "KCS Super Week":"KCS Super Week"
 }
