--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -225,5 +225,6 @@
   "Ecosystem Incentive Funds Announced": "鏈上生態激勵計劃發布",
   "First Hackathon Kicked Off": "首屆黑客松（KCC Unicorn Contest）開幕",
   "Incubating Most Valued Projects in Unicorn": "孵化KCC  Unicorn Contest中最具價值的項目",
-  "Safe.kcc.io Launched": "多簽錢包上線"
+  "Safe.kcc.io Launched": "多簽錢包上線",
+    "KCS Super Week": "KCS超級週"
 }
