feat(menu): add mainnet faucet

--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -9,6 +9,7 @@
   "Testnet Explorer": "测试网浏览器",
   "View information on the KCC public chain（testnet）": "查看KCC测试网上的信息",
   "Testnet faucet": "测试网水龙头",
+  "Mainnet faucet":"主网水龙头",
   "Get KCC testnet tokens": "获取KCC公链测试币",
   "Ecosystem": "生态系统",
   "Dapp": "Dapp",
