--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,7 @@
   "Testnet Explorer": "Testnet Explorer",
   "View information on the KCC public chain（testnet）": "Browse information on KCC (testnet)",
   "Testnet faucet": "Testnet Faucet",
+  "Mainnet faucet": "Mainnet Faucet",
   "Get KCC testnet tokens": "Get KCC testnet tokens",
   "Ecosystem": "Ecosystem",
   "Dapp": "DApp",
@@ -228,5 +229,5 @@
   "Ecosystem Incentive Funds Announced": "Ecosystem Incentive Funds Announced",
   "First Hackathon Kicked Off": "First Hackathon Kicked Off",
   "Incubating Most Valued Projects in Unicorn": "Incubating Most Valued Projects in Unicorn",
-  "KCS Super Week":"KCS Super Week"
+  "KCS Super Week": "KCS Super Week"
 }
