fix(faucet): remove faucet

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,8 @@
   "Testnet Explorer": "Testnet Explorer",
   "View information on the KCC public chain（testnet）": "Browse information on KCC (testnet)",
   "Testnet faucet": "Testnet Faucet",
-  "Mainnet faucet": "Mainnet Faucet",
+  "Mainnet faucet": "KCC Faucet",
+  "Get KCS tokens": "Get KCS tokens",
   "Get KCC testnet tokens": "Get KCC testnet tokens",
   "Ecosystem": "Ecosystem",
   "Dapp": "DApp",
