--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -226,5 +226,7 @@
   "First Hackathon Kicked Off": "首屆黑客松（KCC Unicorn Contest）開幕",
   "Incubating Most Valued Projects in Unicorn": "孵化KCC  Unicorn Contest中最具價值的項目",
   "Safe.kcc.io Launched": "多簽錢包上線",
-    "KCS Super Week": "KCS超級週"
+  "KCS Super Week": "KCS超級週",
+  "Mainnet faucet": "主網水龍頭",
+  "Get KCS tokens": "獲得KCS代幣"
 }
