feat(menu): add new wallet

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -218,5 +218,7 @@
   "it to us.": "it to us.",
   "Unicorn Contest": "Unicorn Wettbewerb",
   "Event": "Ereignis",
-  "KCC Community": "KCC Gemeinschaft"
+  "KCC Community": "KCC Gemeinschaft",
+  "KuCoin Wallet": "KuCoin Wallet",
+  "Go to KuCoin Wallet": "Zu KuCoin Wallet gehen"
 }
