--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -110,5 +110,7 @@
   "it to us.": "it to us.",
   "Unicorn Contest": "Concurso Unicornio",
   "Event": "Evento",
-  "KCC Community": "Comunidad KCC"
+  "KCC Community": "Comunidad KCC",
+  "KuCoin Wallet": "KuCoin Wallet",
+  "Go to KuCoin Wallet": "Visita KuCoin Wallet"
 }
