--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -228,5 +228,7 @@
   "Safe.kcc.io Launched": "多簽錢包上線",
   "KCS Super Week": "KCS超級週",
   "Mainnet faucet": "主網水龍頭",
-  "Get KCS tokens": "獲得KCS代幣"
+  "Get KCS tokens": "獲得KCS代幣",
+  "KuCoin Wallet": "KuCoin Wallet",
+  "Go to KuCoin Wallet": "訪問並跳轉到KuCoin Wallet"
 }
