--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -230,5 +230,7 @@
   "Ecosystem Incentive Funds Announced": "Ecosystem Incentive Funds Announced",
   "First Hackathon Kicked Off": "First Hackathon Kicked Off",
   "Incubating Most Valued Projects in Unicorn": "Incubating Most Valued Projects in Unicorn",
-  "KCS Super Week": "KCS Super Week"
+  "KCS Super Week": "KCS Super Week",
+  "KuCoin Wallet": "KuCoin Wallet",
+  "Go to KuCoin Wallet": "Go to KuCoin Wallet"
 }
