--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -232,5 +232,7 @@
   "Ecosystem Incentive Funds Announced": "链上生态激励计划发布",
   "First Hackathon Kicked Off": "首届黑客松（KCC Unicorn Contest）开幕",
   "Incubating Most Valued Projects in Unicorn": "孵化KCC Unicorn Contest中最具价值的项目",
-  "KCS Super Week": "KCS超级周"
+  "KCS Super Week": "KCS超级周",
+  "KuCoin Wallet": "KuCoin Wallet",
+  "Go to KuCoin Wallet": "访问并跳转到KuCoin Wallet"
 }
